# titankv

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMPATIBILITY_MATRIX.md  LICENSE  MIGRATION_GUIDE.md  PHASE3_DESIGN.md  README.md  ROADMAP.md  WHAT_YOU_CAN_BUILD.md  binding.gyp  example_usage.js  package-lock.json  package.json
.agent/rules/: code-style.md
.github/workflows/: ci.yml
benchmark/compare/: README.md  package-lock.json  package.json  run.js
benchmark/compare/engines/: README.md
benchmark/compare/reports/: 01-titankv.html  02-sqlite.html  03-lmdb.html  04-level.html  05-rocksdb.html
examples/frontend-test/: README.md  server.js
examples/frontend-test/public/: app.js  index.html  styles.css
include/: titankv.hpp  wal.hpp
lib/: express-session.js  index.d.ts  index.js  nextjs-cache.js
src/binding/: addon.cpp
src/core/: checksum.hpp  compressor.cpp  compressor.hpp  db.cpp  manifest.cpp  manifest.hpp  sstable.cpp  sstable.hpp  storage.cpp  storage.hpp  titankv.cpp  utils.hpp  wal.cpp  wal.hpp
test/: benchmark.js  benchmark_advanced.js  benchmark_compression.js  cluster.js  express_session_test.js  fuzz.js  index.js  memory_leak.js  nextjs_cache_test.js
test/npm-install-test/: example_usage.js  package-lock.json  package.json
